log
Wed, Mar 19, 2025  8:38:23 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:47:02 AM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:12: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       dato = (int)k;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
9c476b7
Wed, Mar 19, 2025  8:48:35 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
400f243
Wed, Mar 19, 2025  8:59:51 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4f89da8
Wed, Mar 19, 2025  9:00:37 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
3c836d5
Wed, Mar 19, 2025  9:06:37 AM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
exercises.c: In function 'eliminaElementos':
exercises.c:88:15: error: comparison between pointer and integer [-Werror]
       if(dato == elem)
               ^~
cc1.exe: all warnings being treated as errors
Compilation failed
8e6fe80
Wed, Mar 19, 2025  9:07:57 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
193e756
Wed, Mar 19, 2025  9:11:09 AM: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
e3b7a18
Wed, Mar 19, 2025  9:11:59 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
b8cb173
Wed, Mar 19, 2025  9:16:35 AM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
e91fa02
Wed, Mar 19, 2025  9:17:44 AM: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + dato;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
928cbd2
Wed, Mar 19, 2025  9:18:15 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7e8879f
Thu, Mar 20, 2025 11:23:48 AM: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:112:10: error: redefinition of 'dato'
  112 |    void* dato = top(pilaAux);
      |          ^~~~
exercises.c:105:10: note: previous definition of 'dato' with type 'void *'
  105 |    void* dato = top(P1);
      |          ^~~~
Compilation failed
82990f2
Thu, Mar 20, 2025 11:23:52 AM: 
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:112:10: error: redefinition of 'dato'
  112 |    void* dato = top(pilaAux);
      |          ^~~~
exercises.c:105:10: note: previous definition of 'dato' with type 'void *'
  105 |    void* dato = top(P1);
      |          ^~~~
Compilation failed
e3e32ef
Thu, Mar 20, 2025 11:26:43 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:112:10: error: redefinition of 'dato'
  112 |    void* dato = top(pilaAux);
      |          ^~~~
exercises.c:105:10: note: previous definition of 'dato' with type 'void *'
  105 |    void* dato = top(P1);
      |          ^~~~
Compilation failed
1798997
Thu, Mar 20, 2025 11:28:20 AM: 
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:112:10: error: redefinition of 'dato'
  112 |    void* dato = top(pilaAux);
      |          ^~~~
exercises.c:105:10: note: previous definition of 'dato' with type 'void *'
  105 |    void* dato = top(P1);
      |          ^~~~
Compilation failed
0c19926
Thu, Mar 20, 2025 11:28:45 AM: 
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:112:10: error: redefinition of 'dato'
  112 |    void* dato = top(pilaAux);
      |          ^~~~
exercises.c:105:10: note: previous definition of 'dato' with type 'void *'
  105 |    void* dato = top(P1);
      |          ^~~~
Compilation failed
9743df1
Thu, Mar 20, 2025 11:28:56 AM: 
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:112:10: error: redefinition of 'dato'
  112 |    void* dato = top(pilaAux);
      |          ^~~~
exercises.c:105:10: note: previous definition of 'dato' with type 'void *'
  105 |    void* dato = top(P1);
      |          ^~~~
Compilation failed
1bca7c5
